--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "nodemon index.js",
-    "build": "npm run build"
-    
+    "build": "npm install"
+
   },
   "author": "",
   "license": "ISC",
